--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.6.2",
     "axios": "^0.20.0",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
