--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
