--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-highlight-words": "^0.16.0",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.9",
