--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
+    "react-idle-timer": "^4.3.7",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.9",
