--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "0.0.20",
+    "redux-persist-transform-immutable": "^5.0.0",
     "redux-saga": "^1.1.3",
     "reqwest": "^2.0.5",
     "reselect": "^4.0.0"
