Image uploading WIP

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.6.2",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "form-data": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.29.0",
     "node-sass": "^4.14.1",
@@ -21,7 +22,7 @@
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
